--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,3 +1,12 @@
 {
-  "rewrites": [{ "source": "/routes/(.*)", "destination": "/" }]
-}
+    "version":2,
+    "builds": [
+      { "src": "./server.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+    ]
+  }
