--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./routes" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
