--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "twitter clone app backend",
   "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
