--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,3 +1,4 @@
+
 {
   "version": 2,
   "builds": [
@@ -9,7 +10,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "./server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
