--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -13,7 +13,7 @@
       "dest": "./server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "https://ecom-five-ivory.vercel.app"
       }
     }
   ]
